# fsdantic

./: .tmuxp.yaml  AGENTS.md  CAIRN_LIBRARY_REVIEW.md  CODE_REVIEW.md  CONCEPT.md  FINAL_REFACTOR.md  FSDANTIC_EXTENSION_PLAN.md  MIGRATION.md  README.md  SPEC.md  devenv.nix  pyproject.toml  pytest.ini
.refactor/: REFACTORING-STEP_1.md  REFACTORING-STEP_2.md  REFACTORING-STEP_3.md  REFACTORING-STEP_4.md  REFACTORING-STEP_5.md  REFACTORING-STEP_6.md  REFACTORING-STEP_7.md  REFACTORING-STEP_8.md  REFACTORING_GUIDE.md
examples/: basic_usage.py
scripts/: phase8_quality_gate.py
src/fsdantic/: __init__.py  client.py  exceptions.py  files.py  kv.py  materialization.py  models.py  operations.py  overlay.py  repository.py  view.py  workspace.py
src/fsdantic/_internal/: __init__.py  errors.py
tests/: conftest.py  performance_baseline.json  test_concurrency.py  test_errors.py  test_improvements.py  test_integration.py  test_kv.py  test_kv_records.py  test_materialization.py  test_models.py  test_operations.py  test_overlay.py  test_paths.py  test_performance.py  test_property_based.py  test_public_api_contract.py  test_repository.py  test_streaming_internal.py  test_workspace.py  test_workspace_managers.py
